tests/snapshots/alt_syntax_tests__declare_strict_types.snap
---
source: tests/alt_syntax_tests.rs
expression: program
---
Program {
    statements: [
        Declare {
            declares: [
                DeclareItem {
                    key: Token {
                        kind: Identifier,
                        span: Span {
                            start: 14,
                            end: 26,
                        },
                    },
                    value: Integer {
                        value: [
                            49,
                        ],
                        span: Span {
                            start: 27,
                            end: 28,
                        },
                    },
                    span: Span {
                        start: 14,
                        end: 28,
                    },
                },
            ],
            body: [],
            span: Span {
                start: 6,
                end: 30,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 30,
    },
}
