tests/snapshots/alt_syntax_tests__foreach_alt.snap
---
source: tests/alt_syntax_tests.rs
expression: program
---
Program {
    statements: [
        Foreach {
            expr: Variable {
                name: Span {
                    start: 15,
                    end: 19,
                },
                span: Span {
                    start: 15,
                    end: 19,
                },
            },
            key_var: Some(
                Variable {
                    name: Span {
                        start: 23,
                        end: 25,
                    },
                    span: Span {
                        start: 23,
                        end: 25,
                    },
                },
            ),
            value_var: Variable {
                name: Span {
                    start: 29,
                    end: 31,
                },
                span: Span {
                    start: 29,
                    end: 31,
                },
            },
            body: [
                Echo {
                    exprs: [
                        Variable {
                            name: Span {
                                start: 39,
                                end: 41,
                            },
                            span: Span {
                                start: 39,
                                end: 41,
                            },
                        },
                    ],
                    span: Span {
                        start: 34,
                        end: 53,
                    },
                },
            ],
            span: Span {
                start: 6,
                end: 54,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 54,
    },
}
